# task-manager-api

./: .env.example  .gitignore  pyproject.toml
app/core/: config.py  logging.py
app/db/: base.py
task_manager_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
