[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "task-manager-api"
version = "0.1.0"
description = "Production-grade Task Management REST API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.14,<2.0",
    "pydantic-settings>=2.6,<3.0",
    "structlog>=24.4,<25.0",
    "greenlet>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

# --- Ruff (linter + formatter) ---
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "N",   # pep8-naming conventions
    "UP",  # pyupgrade (modernise syntax automatically)
    "B",   # flake8-bugbear (likely bugs and design issues)
]
ignore = [
    "B008", # FastAPI's Depends(), Query(), Body() are called inside function signatures
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# --- MyPy (static type checker) ---
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

# --- Pytest ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
